--- a/.github/workflows/wf.yml
+++ b/.github/workflows/wf.yml
@@ -8,3 +8,7 @@ jobs:
     steps:
       - name: echo string
         run: echo "Hello world"
+      - name: multiple script
+        run: |
+          node -v
+          npm -v
