--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,6 +10,13 @@ jobs:
         run: |
           pwd
           ls
+      - name:
+        uses: actions/checkout@v1
+       - name: List Files after checkout
+        run: |
+          pwd
+          ls       
+
       - name: simple JS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1
