variables and token

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,7 +18,8 @@ jobs:
           ls    
           echo $GITHUB_SHA
           echo $GITHUB_REPOSITORY
-          echo $GITHUB_WORKSPACE  
+          echo $GITHUB_WORKSPACE
+          echo "${{ github.token }}"  
 
       - name: simple JS Action
         id: greet
