--- a/.github/workflows/actions-new.yml
+++ b/.github/workflows/actions-new.yml
@@ -1,10 +1,12 @@
 name: Action workfkow2
 
 on: 
+  schedule:
+    - cron: "0/5 * * * *"
   push:
-  pull_request:
-    types: [ closed, assigned, opened, reopened]
-
+  #pull_request:
+  #  types: [ closed, assigned, opened, reopened]
+  
 
 jobs:
   run-github-actions:
